# foundationr

./: .gitignore  Cargo.toml  LICENSE.md  README.md
.github/workflows/: ci.yaml
src/: lib.rs  magic_string.rs  nsarray.rs  nsattributedstring.rs  nscopying.rs  nsdata.rs  nsdate.rs  nsdictionary.rs  nsenumerator.rs  nsgeometry.rs  nsnotification.rs  nsrange.rs  nsrunloop.rs  nsstring.rs  nsthread.rs  nsurl.rs  nsurlrequest.rs  nsurlresponse.rs  nsurlsession.rs  nsvalue.rs  types.rs
