[package]
name = "foundationr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[features]
nsurl = []
nsdata = []
nsurlresponse = []
nsurlrequest = ["nsurl","nsdata"]
nsurlsession = ["nsurlrequest","nsurlresponse"]
nsthread = []
nsdictionary = ["nscopying"]
nsvalue = []
nscopying = []
nsnotification = []
nsrange = []
nsrunloop = ["nsdate"]
nsdate = []
nsarray = ["nsenumerator"]
nsenumerator = []
nsfontdescriptor = []
nsattributedstring = ["nsdictionary"]

all = ["nsurl","nsdata","nsurlresponse","nsurlrequest","nsurlsession","nsthread","nsdictionary","nsvalue","nscopying", "nsnotification","nsrange","nsrunloop","nsdate","nsarray","nsenumerator","nsfontdescriptor","nsattributedstring"]
[dependencies]
objr = "1"
blocksr = "1"
coregraphicsr = {git = "https://github.com/drewcrawford/coregraphicsr"}
